--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #f9fbfd;
+  background: rgb(55, 99, 61);
 }
 
 .wrapper {
@@ -25,9 +25,11 @@ body {
 
 header {
   text-align: center;
-  padding: 20px;
-  padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+  color: hsl(0, 0%, 100%);
+}
+
+h2 {
+  text-align: center;
 }
 
 .card {
@@ -39,7 +41,7 @@ header {
   font-size: 18px;
   margin: 0 auto;
   max-width: 800px;
-  padding: 30px 40px;
+  padding: 20px;
 }
 
 .card-header::after {
@@ -51,7 +53,9 @@ header {
 }
 
 .card-body {
+  position: relative;
   min-height: 100px;
+  margin: 20px;
 }
 
 .card-footer {
@@ -74,7 +78,7 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: rgb(176, 75, 75);
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
@@ -116,6 +120,15 @@ button[disabled] {
   border-radius: 6px;
   resize: none;
   overflow: hidden;
+}
+
+#userInput {
+  position: relative;
+  width: 80%;
+  height: auto;
+  margin: auto;
+  padding: 2%;
+  display: block;
 }
 
 @media (max-width: 690px) {
